--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,4 @@ add_subdirectory(${PROJECT_HOME_DIR}/algorithm)
 add_subdirectory(${PROJECT_HOME_DIR}/common)
 add_subdirectory(${PROJECT_HOME_DIR}/hw)
 add_subdirectory(${PROJECT_HOME_DIR}/traits)
+add_subdirectory(${PROJECT_HOME_DIR}/units)
