--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ else()
     set(USE_TESTS OFF)
 endif()
 
+set(LIBRARY_DIR ${PROJECT_SOURCE_DIR})
+
 add_subdirectory(${PROJECT_HOME_DIR}/algorithm)
 add_subdirectory(${PROJECT_HOME_DIR}/common)
 add_subdirectory(${PROJECT_HOME_DIR}/containers)
