--- a/mtl/common/CMakeLists.txt
+++ b/mtl/common/CMakeLists.txt
@@ -16,7 +16,7 @@ target_sources(${LIBRARY} INTERFACE ${SOURCE_LIST})
 include(GNUInstallDirs)
 target_include_directories(
     ${LIBRARY} INTERFACE
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
+    $<BUILD_INTERFACE:${LIBRARY_DIR}>
     $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
 
 # Configure testing project.
