`mtl/traits` module CMake configuration updated.

--- a/mtl/traits/CMakeLists.txt
+++ b/mtl/traits/CMakeLists.txt
@@ -10,6 +10,9 @@ add_library(${LIBRARY} INTERFACE)
 add_library(mtl::${LIBRARY} ALIAS ${LIBRARY})
 
 set(SOURCE_LIST
+    ${CMAKE_CURRENT_SOURCE_DIR}/accumulate.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/apply.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/isin.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/list.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/types.hpp)
 target_sources(${LIBRARY} INTERFACE ${SOURCE_LIST})
