--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(${PROJECT_HOME_DIR}/algorithm)
 add_subdirectory(${PROJECT_HOME_DIR}/buffers)
 add_subdirectory(${PROJECT_HOME_DIR}/common)
 add_subdirectory(${PROJECT_HOME_DIR}/containers)
+add_subdirectory(${PROJECT_HOME_DIR}/drivers)
 add_subdirectory(${PROJECT_HOME_DIR}/hw)
 add_subdirectory(${PROJECT_HOME_DIR}/traits)
 add_subdirectory(${PROJECT_HOME_DIR}/units)
