--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,5 +22,6 @@ add_subdirectory(${PROJECT_HOME_DIR}/common)
 add_subdirectory(${PROJECT_HOME_DIR}/containers)
 add_subdirectory(${PROJECT_HOME_DIR}/drivers)
 add_subdirectory(${PROJECT_HOME_DIR}/hw)
+add_subdirectory(${PROJECT_HOME_DIR}/sys)
 add_subdirectory(${PROJECT_HOME_DIR}/traits)
 add_subdirectory(${PROJECT_HOME_DIR}/units)
