`testing` module was added.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,5 +24,6 @@ add_subdirectory(${PROJECT_HOME_DIR}/drivers)
 add_subdirectory(${PROJECT_HOME_DIR}/hw)
 add_subdirectory(${PROJECT_HOME_DIR}/os)
 add_subdirectory(${PROJECT_HOME_DIR}/sys)
+add_subdirectory(${PROJECT_HOME_DIR}/testing)
 add_subdirectory(${PROJECT_HOME_DIR}/traits)
 add_subdirectory(${PROJECT_HOME_DIR}/units)
