`network` module was added.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_subdirectory(${PROJECT_HOME_DIR}/common)
 add_subdirectory(${PROJECT_HOME_DIR}/containers)
 add_subdirectory(${PROJECT_HOME_DIR}/drivers)
 add_subdirectory(${PROJECT_HOME_DIR}/hw)
+#add_subdirectory(${PROJECT_HOME_DIR}/network)
 add_subdirectory(${PROJECT_HOME_DIR}/os)
 add_subdirectory(${PROJECT_HOME_DIR}/sys)
 add_subdirectory(${PROJECT_HOME_DIR}/testing)
