--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ set(LIBRARY_DIR ${PROJECT_SOURCE_DIR})
 add_subdirectory(${PROJECT_HOME_DIR}/algorithm)
 add_subdirectory(${PROJECT_HOME_DIR}/buffers)
 add_subdirectory(${PROJECT_HOME_DIR}/common)
+add_subdirectory(${PROJECT_HOME_DIR}/control/pid)
 add_subdirectory(${PROJECT_HOME_DIR}/containers)
 add_subdirectory(${PROJECT_HOME_DIR}/drivers)
 add_subdirectory(${PROJECT_HOME_DIR}/hw)
